2010-11-12  Joseph Myers  <joseph@codesourcery.com>

	* Make-lang.in (g++spec.o): Use $(OPTS_H).

2010-11-13  Ville Voutilainen <ville.voutilainen@gmail.com> <ville.voutilainen@symbio.com>

	Core 1135, 1136, 1145, 1149
	* method.c (defaultable_fn_check): Do not disallow defaulting a
	non-public or explicit special member function on its first
	declaration.

2010-11-12  James Dennett <jdennett@google.com>

	PR/39415
	* typeck.c (build_static_cast_1): Convert to the target type
	when doing static_cast<cv Derived*>(Base*).

2010-11-10  Jason Merrill  <jason@redhat.com>

	PR c++/46420
	* pt.c (tsubst_copy_and_build) [TARGET_EXPR]: New case.
	[CONSTRUCTOR]: Use the tsubsted type.

	PR c++/46369
	* semantics.c (cxx_eval_bit_field_ref): New.
	(cxx_eval_constant_expression): Call it.

2010-11-10  Joseph Myers  <joseph@codesourcery.com>

	* cvt.c (cp_convert_to_pointer): Use %' in diagnostic.
	* decl.c (layout_var_decl, maybe_commonize_var, grokdeclarator):
	Use %' in diagnostics.
	* decl2.c (check_classfn): Use %' in diagnostic.
	* init.c (build_java_class_ref): Use %' in diagnostic.
	(build_delete): Remove trailing '.' from diagnostic.
	* method.c (do_build_copy_assign, walk_field_subobs): Use %' in
	diagnostics.
	* name-lookup.c (pushdecl_maybe_friend): Use %' in diagnostic.
	* parser.c (cp_parser_exception_specification_opt): Remove
	trailing '.' from diagnostic.
	(cp_parser_objc_interstitial_code): Use %qs for quoting in
	diagnostic.
	* pt.c (check_valid_ptrmem_cst_expr): Use %< and %> for quoting in
	diagnostic.
	* repo.c (reopen_repo_file_for_write): Use %' in diagnostic.

2010-11-10  Nathan Froyd  <froydnj@codesourcery.com>

	PR c++/46065
	* decl.c (poplevel_named_label_1): Use TREE_CHAIN if necessary.

2010-11-09  Jakub Jelinek  <jakub@redhat.com>

	PR c++/45894
	* tree.c (lvalue_kind): Don't crash if ref has NULL type.

2010-11-08  Jason Merrill  <jason@redhat.com>

	PR c++/46382
	* semantics.c (check_constexpr_ctor_body): New fn.