@@ -5761,6 +5761,7 @@ cp_finish_decl (tree decl, tree init, bool init_const_expr_p,
       if (TREE_CODE (d_init) == TREE_LIST)
 	d_init = build_x_compound_expr_from_list (d_init, ELK_INIT,
 						  tf_warning_or_error);
+      d_init = resolve_nondeduced_context (d_init);
       if (describable_type (d_init))
 	{
 	  type = TREE_TYPE (decl) = do_auto_deduction (type, d_init,
